CMAKE_minimum_required(VERSION 3.16)

# line comment

#[[ multi-line comment
comment line 1
comment line 2
]]

message("\n############# This is debug info #############\n")

message("OS Info:")
message("- CMAKE_SYSTEM_NAME")
message("- Before project define CMAKE_SYSTEM_NAME is: ${CMAKE_SYSTEM_NAME}")

project(X0_CMAKE 
    VERSION 0.0.1.0
    DESCRIPTION "0 to 1 CMAKE tutorial"
    HOMEPAGE_URL "https://github.com/junxnone/X0_CMAKE"
    LANGUAGES CXX)
configure_file(config.h.in config.h)

add_executable(0_c main.cpp)
target_include_directories(0_c PUBLIC
                           "${PROJECT_BINARY_DIR}"
                           )

message("- After project define CMAKE_SYSTEM_NAME is: ${CMAKE_SYSTEM_NAME}\n")
message("- WIN32 is: ${WIN32}")
message("- MSVC is: ${MSVC}")
message("- LINUX is: ${LINUX}")
message("- CMAKE_HOST_LINUX is: ${CMAKE_HOST_LINUX}")
message("- CMAKE_HOST_SYSTEM is: ${CMAKE_HOST_SYSTEM}")
message("- CMAKE_HOST_SYSTEM_NAME is: ${CMAKE_HOST_SYSTEM_NAME}")
message("- CMAKE_HOST_SYSTEM_PROCESSOR is: ${CMAKE_HOST_SYSTEM_PROCESSOR}")
message("- CMAKE_HOST_SYSTEM_VERSION is: ${CMAKE_HOST_SYSTEM_VERSION}")

message("- CMAKE_SYSTEM is: ${CMAKE_SYSTEM}")
message("- CMAKE_SYSTEM_NAME is: ${CMAKE_SYSTEM_NAME}")
message("- CMAKE_SYSTEM_PROCESSOR is: ${CMAKE_SYSTEM_PROCESSOR}")
message("- CMAKE_SYSTEM_VERSION is: ${CMAKE_SYSTEM_VERSION}")
message("- CMAKE_LIBRARY_ARCHITECTURE is: ${CMAKE_LIBRARY_ARCHITECTURE}")
message("- CMAKE_LIBRARY_ARCHITECTURE_REGEX is: ${CMAKE_LIBRARY_ARCHITECTURE_REGEX}")



message("- CMAKE_C_COMPILE_FEATURES is: ${CMAKE_C_COMPILE_FEATURES}")
message("- CMAKE_C_STANDARD is: ${CMAKE_C_STANDARD}")
message("- CMAKE_CXX_COMPILE_FEATURES is: ${CMAKE_CXX_COMPILE_FEATURES}")
message("- CMAKE_AR is: ${CMAKE_AR}")

message("- X0_CMAKE_BINARY_DIR is: ${X0_CMAKE_BINARY_DIR}")









message("\nDirectory Info:")
message("- PROJECT_BINARY_DIR is: ${PROJECT_BINARY_DIR}")
message("- CMAKE_CURRENT_SOURCE_DIR is: ${CMAKE_CURRENT_SOURCE_DIR}")
message("- CMAKE_BINARY_DIR is: ${CMAKE_BINARY_DIR}")
message("- CMAKE_CACHEFILE_DIR is: ${CMAKE_CACHEFILE_DIR}")
message("- CMAKE_CFG_INTDIR is: ${CMAKE_CFG_INTDIR}")

message("- CMAKE_CURRENT_BINARY_DIR is: ${CMAKE_CURRENT_BINARY_DIR}")
message("- CMAKE_CURRENT_FUNCTION_LIST_DIR is: ${CMAKE_CURRENT_FUNCTION_LIST_DIR}")
message("- CMAKE_CURRENT_LIST_DIR is: ${CMAKE_CURRENT_LIST_DIR}")
message("- CMAKE_FIND_PACKAGE_REDIRECTS_DIR is: ${CMAKE_FIND_PACKAGE_REDIRECTS_DIR}")
message("- CMAKE_SOURCE_DIR is: ${CMAKE_SOURCE_DIR}")
message("- CMAKE_VS_PLATFORM_TOOLSET_CUDA_CUSTOM_DIR is: ${CMAKE_VS_PLATFORM_TOOLSET_CUDA_CUSTOM_DIR}")
message("- PROJECT_SOURCE_DIR is: ${PROJECT_SOURCE_DIR}")


message("- CMAKE_AR is: ${CMAKE_AR}")
message("- CMAKE_ARGC is: ${CMAKE_ARGC}")
message("- CMAKE_ARGV0 is: ${CMAKE_ARGV0}")
message("- CMAKE_BINARY_DIR is: ${CMAKE_BINARY_DIR}")
message("- CMAKE_BUILD_TOOL is: ${CMAKE_BUILD_TOOL}")
message("- CMAKE_CACHE_MAJOR_VERSION is: ${CMAKE_CACHE_MAJOR_VERSION}")
message("- CMAKE_CACHE_MINOR_VERSION is: ${CMAKE_CACHE_MINOR_VERSION}")
message("- CMAKE_CACHE_PATCH_VERSION is: ${CMAKE_CACHE_PATCH_VERSION}")
message("- CMAKE_CACHEFILE_DIR is: ${CMAKE_CACHEFILE_DIR}")
message("- CMAKE_CFG_INTDIR is: ${CMAKE_CFG_INTDIR}")
message("- CMAKE_COMMAND is: ${CMAKE_COMMAND}")
message("- CMAKE_CPACK_COMMAND is: ${CMAKE_CPACK_COMMAND}")
message("- CMAKE_CROSSCOMPILING is: ${CMAKE_CROSSCOMPILING}")
message("- CMAKE_CROSSCOMPILING_EMULATOR is: ${CMAKE_CROSSCOMPILING_EMULATOR}")
message("- CMAKE_CTEST_COMMAND is: ${CMAKE_CTEST_COMMAND}")
message("- CMAKE_CURRENT_BINARY_DIR is: ${CMAKE_CURRENT_BINARY_DIR}")
message("- CMAKE_CURRENT_FUNCTION is: ${CMAKE_CURRENT_FUNCTION}")
message("- CMAKE_CURRENT_FUNCTION_LIST_DIR is: ${CMAKE_CURRENT_FUNCTION_LIST_DIR}")
message("- CMAKE_CURRENT_FUNCTION_LIST_FILE is: ${CMAKE_CURRENT_FUNCTION_LIST_FILE}")
message("- CMAKE_CURRENT_FUNCTION_LIST_LINE is: ${CMAKE_CURRENT_FUNCTION_LIST_LINE}")
message("- CMAKE_CURRENT_LIST_DIR is: ${CMAKE_CURRENT_LIST_DIR}")
message("- CMAKE_CURRENT_LIST_FILE is: ${CMAKE_CURRENT_LIST_FILE}")
message("- CMAKE_CURRENT_LIST_LINE is: ${CMAKE_CURRENT_LIST_LINE}")
message("- CMAKE_CURRENT_SOURCE_DIR is: ${CMAKE_CURRENT_SOURCE_DIR}")
message("- CMAKE_DEBUG_TARGET_PROPERTIES is: ${CMAKE_DEBUG_TARGET_PROPERTIES}")
message("- CMAKE_DIRECTORY_LABELS is: ${CMAKE_DIRECTORY_LABELS}")
message("- CMAKE_DL_LIBS is: ${CMAKE_DL_LIBS}")
message("- CMAKE_DOTNET_SDK is: ${CMAKE_DOTNET_SDK}")
message("- CMAKE_DOTNET_TARGET_FRAMEWORK is: ${CMAKE_DOTNET_TARGET_FRAMEWORK}")
message("- CMAKE_DOTNET_TARGET_FRAMEWORK_VERSION is: ${CMAKE_DOTNET_TARGET_FRAMEWORK_VERSION}")
message("- CMAKE_EDIT_COMMAND is: ${CMAKE_EDIT_COMMAND}")
message("- CMAKE_EXECUTABLE_SUFFIX is: ${CMAKE_EXECUTABLE_SUFFIX}")
message("- CMAKE_EXECUTABLE_SUFFIX_C is: ${CMAKE_EXECUTABLE_SUFFIX_C}")
message("- CMAKE_EXECUTABLE_SUFFIX_CXX is: ${CMAKE_EXECUTABLE_SUFFIX_CXX}")
message("- CMAKE_EXTRA_GENERATOR is: ${CMAKE_EXTRA_GENERATOR}")
message("- CMAKE_EXTRA_SHARED_LIBRARY_SUFFIXES is: ${CMAKE_EXTRA_SHARED_LIBRARY_SUFFIXES}")
message("- CMAKE_FIND_DEBUG_MODE is: ${CMAKE_FIND_DEBUG_MODE}")
message("- CMAKE_FIND_PACKAGE_NAME is: ${CMAKE_FIND_PACKAGE_NAME}")
message("- CMAKE_FIND_PACKAGE_REDIRECTS_DIR is: ${CMAKE_FIND_PACKAGE_REDIRECTS_DIR}")
message("- CMAKE_FIND_PACKAGE_SORT_DIRECTION is: ${CMAKE_FIND_PACKAGE_SORT_DIRECTION}")
message("- CMAKE_FIND_PACKAGE_SORT_ORDER is: ${CMAKE_FIND_PACKAGE_SORT_ORDER}")
message("- CMAKE_GENERATOR is: ${CMAKE_GENERATOR}")
message("- CMAKE_GENERATOR_INSTANCE is: ${CMAKE_GENERATOR_INSTANCE}")
message("- CMAKE_GENERATOR_PLATFORM is: ${CMAKE_GENERATOR_PLATFORM}")
message("- CMAKE_GENERATOR_TOOLSET is: ${CMAKE_GENERATOR_TOOLSET}")
message("- CMAKE_IMPORT_LIBRARY_PREFIX is: ${CMAKE_IMPORT_LIBRARY_PREFIX}")
message("- CMAKE_IMPORT_LIBRARY_SUFFIX is: ${CMAKE_IMPORT_LIBRARY_SUFFIX}")
message("- CMAKE_JOB_POOL_COMPILE is: ${CMAKE_JOB_POOL_COMPILE}")
message("- CMAKE_JOB_POOL_LINK is: ${CMAKE_JOB_POOL_LINK}")
message("- CMAKE_JOB_POOL_PRECOMPILE_HEADER is: ${CMAKE_JOB_POOL_PRECOMPILE_HEADER}")
message("- CMAKE_JOB_POOLS is: ${CMAKE_JOB_POOLS}")
message("- CMAKE_C_COMPILER_AR is: ${CMAKE_C_COMPILER_AR}")
message("- CMAKE_CXX_COMPILER_AR is: ${CMAKE_CXX_COMPILER_AR}")
message("- CMAKE_C_COMPILER_FRONTEND_VARIANT is: ${CMAKE_C_COMPILER_FRONTEND_VARIANT}")
message("- CMAKE_CXX_COMPILER_FRONTEND_VARIANT is: ${CMAKE_CXX_COMPILER_FRONTEND_VARIANT}")
message("- CMAKE_C_COMPILER_RANLIB is: ${CMAKE_C_COMPILER_RANLIB}")
message("- CMAKE_CXX_COMPILER_RANLIB is: ${CMAKE_CXX_COMPILER_RANLIB}")
message("- CMAKE_C_LINK_LIBRARY_SUFFIX is: ${CMAKE_C_LINK_LIBRARY_SUFFIX}")
message("- CMAKE_CXX_LINK_LIBRARY_SUFFIX is: ${CMAKE_CXX_LINK_LIBRARY_SUFFIX}")
message("- CMAKE_LINK_LIBRARY_SUFFIX is: ${CMAKE_LINK_LIBRARY_SUFFIX}")
message("- CMAKE_LINK_SEARCH_END_STATIC is: ${CMAKE_LINK_SEARCH_END_STATIC}")
message("- CMAKE_LINK_SEARCH_START_STATIC is: ${CMAKE_LINK_SEARCH_START_STATIC}")
message("- CMAKE_MAJOR_VERSION is: ${CMAKE_MAJOR_VERSION}")
message("- CMAKE_MAKE_PROGRAM is: ${CMAKE_MAKE_PROGRAM}")
message("- CMAKE_MATCH_COUNT is: ${CMAKE_MATCH_COUNT}")
message("- CMAKE_MATCH_0 is: ${CMAKE_MATCH_0}")
message("- CMAKE_MINIMUM_REQUIRED_VERSION is: ${CMAKE_MINIMUM_REQUIRED_VERSION}")
message("- CMAKE_MINOR_VERSION is: ${CMAKE_MINOR_VERSION}")
message("- CMAKE_NETRC is: ${CMAKE_NETRC}")
message("- CMAKE_NETRC_FILE is: ${CMAKE_NETRC_FILE}")
message("- CMAKE_PARENT_LIST_FILE is: ${CMAKE_PARENT_LIST_FILE}")
message("- CMAKE_PATCH_VERSION is: ${CMAKE_PATCH_VERSION}")
message("- CMAKE_PROJECT_DESCRIPTION is: ${CMAKE_PROJECT_DESCRIPTION}")
message("- CMAKE_PROJECT_HOMEPAGE_URL is: ${CMAKE_PROJECT_HOMEPAGE_URL}")
message("- CMAKE_PROJECT_NAME is: ${CMAKE_PROJECT_NAME}")
message("- CMAKE_PROJECT_VERSION is: ${CMAKE_PROJECT_VERSION}")
message("- CMAKE_PROJECT_VERSION_MAJOR is: ${CMAKE_PROJECT_VERSION_MAJOR}")
message("- CMAKE_PROJECT_VERSION_MINOR is: ${CMAKE_PROJECT_VERSION_MINOR}")
message("- CMAKE_PROJECT_VERSION_PATCH is: ${CMAKE_PROJECT_VERSION_PATCH}")
message("- CMAKE_PROJECT_VERSION_TWEAK is: ${CMAKE_PROJECT_VERSION_TWEAK}")
message("- CMAKE_RANLIB is: ${CMAKE_RANLIB}")
message("- CMAKE_ROOT is: ${CMAKE_ROOT}")
message("- CMAKE_RULE_MESSAGES is: ${CMAKE_RULE_MESSAGES}")
message("- CMAKE_SCRIPT_MODE_FILE is: ${CMAKE_SCRIPT_MODE_FILE}")
message("- CMAKE_SHARED_LIBRARY_PREFIX is: ${CMAKE_SHARED_LIBRARY_PREFIX}")
message("- CMAKE_SHARED_LIBRARY_SUFFIX is: ${CMAKE_SHARED_LIBRARY_SUFFIX}")
message("- CMAKE_SHARED_MODULE_PREFIX is: ${CMAKE_SHARED_MODULE_PREFIX}")
message("- CMAKE_SHARED_MODULE_SUFFIX is: ${CMAKE_SHARED_MODULE_SUFFIX}")
message("- CMAKE_SIZEOF_VOID_P is: ${CMAKE_SIZEOF_VOID_P}")
message("- CMAKE_SKIP_INSTALL_RULES is: ${CMAKE_SKIP_INSTALL_RULES}")
message("- CMAKE_SKIP_RPATH is: ${CMAKE_SKIP_RPATH}")
message("- CMAKE_SOURCE_DIR is: ${CMAKE_SOURCE_DIR}")
message("- CMAKE_STATIC_LIBRARY_PREFIX is: ${CMAKE_STATIC_LIBRARY_PREFIX}")
message("- CMAKE_STATIC_LIBRARY_SUFFIX is: ${CMAKE_STATIC_LIBRARY_SUFFIX}")
message("- CMAKE_Swift_MODULE_DIRECTORY is: ${CMAKE_Swift_MODULE_DIRECTORY}")
message("- CMAKE_Swift_NUM_THREADS is: ${CMAKE_Swift_NUM_THREADS}")
message("- CMAKE_TOOLCHAIN_FILE is: ${CMAKE_TOOLCHAIN_FILE}")
message("- CMAKE_TWEAK_VERSION is: ${CMAKE_TWEAK_VERSION}")
message("- CMAKE_VERBOSE_MAKEFILE is: ${CMAKE_VERBOSE_MAKEFILE}")
message("- CMAKE_VERSION is: ${CMAKE_VERSION}")
message("- CMAKE_VS_DEVENV_COMMAND is: ${CMAKE_VS_DEVENV_COMMAND}")
message("- CMAKE_VS_MSBUILD_COMMAND is: ${CMAKE_VS_MSBUILD_COMMAND}")
message("- CMAKE_VS_NsightTegra_VERSION is: ${CMAKE_VS_NsightTegra_VERSION}")
message("- CMAKE_VS_NUGET_PACKAGE_RESTORE is: ${CMAKE_VS_NUGET_PACKAGE_RESTORE}")
message("- CMAKE_VS_PLATFORM_NAME is: ${CMAKE_VS_PLATFORM_NAME}")
message("- CMAKE_VS_PLATFORM_NAME_DEFAULT is: ${CMAKE_VS_PLATFORM_NAME_DEFAULT}")
message("- CMAKE_VS_PLATFORM_TOOLSET is: ${CMAKE_VS_PLATFORM_TOOLSET}")
message("- CMAKE_VS_PLATFORM_TOOLSET_CUDA is: ${CMAKE_VS_PLATFORM_TOOLSET_CUDA}")
message("- CMAKE_VS_PLATFORM_TOOLSET_CUDA_CUSTOM_DIR is: ${CMAKE_VS_PLATFORM_TOOLSET_CUDA_CUSTOM_DIR}")
message("- CMAKE_VS_PLATFORM_TOOLSET_HOST_ARCHITECTURE is: ${CMAKE_VS_PLATFORM_TOOLSET_HOST_ARCHITECTURE}")
message("- CMAKE_VS_PLATFORM_TOOLSET_VERSION is: ${CMAKE_VS_PLATFORM_TOOLSET_VERSION}")
message("- CMAKE_VS_TARGET_FRAMEWORK_IDENTIFIER is: ${CMAKE_VS_TARGET_FRAMEWORK_IDENTIFIER}")
message("- CMAKE_VS_TARGET_FRAMEWORK_TARGETS_VERSION is: ${CMAKE_VS_TARGET_FRAMEWORK_TARGETS_VERSION}")
message("- CMAKE_VS_TARGET_FRAMEWORK_VERSION is: ${CMAKE_VS_TARGET_FRAMEWORK_VERSION}")
message("- CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION is: ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}")
message("- CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION_MAXIMUM is: ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION_MAXIMUM}")
message("- CMAKE_XCODE_BUILD_SYSTEM is: ${CMAKE_XCODE_BUILD_SYSTEM}")
message("- CMAKE_XCODE_PLATFORM_TOOLSET is: ${CMAKE_XCODE_PLATFORM_TOOLSET}")
message("- X0_CMAKE_BINARY_DIR is: ${X0_CMAKE_BINARY_DIR}")
message("- X0_CMAKE_DESCRIPTION is: ${X0_CMAKE_DESCRIPTION}")
message("- X0_CMAKE_HOMEPAGE_URL is: ${X0_CMAKE_HOMEPAGE_URL}")
message("- X0_CMAKE_IS_TOP_LEVEL is: ${X0_CMAKE_IS_TOP_LEVEL}")
message("- X0_CMAKE_SOURCE_DIR is: ${X0_CMAKE_SOURCE_DIR}")
message("- X0_CMAKE_VERSION is: ${X0_CMAKE_VERSION}")
message("- X0_CMAKE_VERSION_MAJOR is: ${X0_CMAKE_VERSION_MAJOR}")
message("- X0_CMAKE_VERSION_MINOR is: ${X0_CMAKE_VERSION_MINOR}")
message("- X0_CMAKE_VERSION_PATCH is: ${X0_CMAKE_VERSION_PATCH}")
message("- X0_CMAKE_VERSION_TWEAK is: ${X0_CMAKE_VERSION_TWEAK}")
message("- PROJECT_BINARY_DIR is: ${PROJECT_BINARY_DIR}")
message("- PROJECT_DESCRIPTION is: ${PROJECT_DESCRIPTION}")
message("- PROJECT_HOMEPAGE_URL is: ${PROJECT_HOMEPAGE_URL}")
message("- PROJECT_IS_TOP_LEVEL is: ${PROJECT_IS_TOP_LEVEL}")
message("- PROJECT_NAME is: ${PROJECT_NAME}")
message("- PROJECT_SOURCE_DIR is: ${PROJECT_SOURCE_DIR}")
message("- PROJECT_VERSION is: ${PROJECT_VERSION}")
message("- PROJECT_VERSION_MAJOR is: ${PROJECT_VERSION_MAJOR}")
message("- PROJECT_VERSION_MINOR is: ${PROJECT_VERSION_MINOR}")
message("- PROJECT_VERSION_PATCH is: ${PROJECT_VERSION_PATCH}")
message("- PROJECT_VERSION_TWEAK is: ${PROJECT_VERSION_TWEAK}")

message("\n############# Debug info end #############\n")

# Modules

include(CMakePrintSystemInformation)
include(FindPackageMessage)
find_package(X11)
find_package_message(X11 "Found X11: ${X11_X11_LIB}"
    "[${X11_X11_LIB}][${X11_INCLUDE_DIR}]")
include(FindCUDA)

option(PRINT_HOST_INFO "Host Info" ON)

#set(PRINT_HOST_INFO ON)
include(host_info.cmake)
message(${PRINT_HOST_INFO})


